# pgo_co

./: .gitignore  Cargo.toml  README.md  plot_solution.py
instances/: fluidSim.bc  fluidSim.json  gol.bc  gol.json
src/: lib.rs  log.rs  main.rs  optimizer.rs
src/co/: constructive.rs  eda.rs  local_search.rs  mod.rs  problem.rs  sa.rs
src/ir_modifier/: mod.rs
src/llvm_utils/: iterators.rs  llvm_utils.rs  mod.rs
src/prof_md/: context.rs  function.rs  iterators.rs  llvm_utils.rs  metadata.rs  mod.rs  module.rs
src/profdata/: context.rs  function.rs  metadata.rs  mod.rs  module.rs
tests/: linked.bc  list.bc  list.ll  simple.bc  simple.ll
