[package]
name = "pgo_co"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "pgo_optimizer"
path = "src/optimizer.rs"

[[bin]]
name = "pgo_viewer"
path = "src/viewer.rs"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
llvm-sys = "120"
libc = "0.2"
rand = { version = "0.8", features = ["alloc"] }
