[package]
name = "pgo_co"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "optimizer"
path = "src/bin/optimizer.rs"

[[bin]]
name = "inspector"
path = "src/bin/inspector.rs"

[[bin]]
name = "generator"
path = "src/bin/generator.rs"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
llvm-sys = "120"
libc = "0.2"
rand = { version = "0.8", features = ["alloc"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
lazy_static = { version = "1.4.0", optional = true }

[features]
log = ["dep:lazy_static"]
